# gpgpu_sample

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: ComputeCppCompilerChecks.cmake  ComputeCppIRMap.cmake  FindComputeCpp.cmake
src/: CMakeLists.txt  CPUImage.cpp  CPUImage.hpp  IBlurProcessor.hpp  IBrightnessProcessor.hpp  IImage.cpp  IImage.hpp  IProcessor.hpp  ISaturationProcessor.hpp  IToneMappingProcessor.hpp  Image.cpp  Image.hpp  Pipeline.hpp  SYCLImage.cpp  SYCLImage.hpp  Window.cpp  Window.hpp  main.cpp  window.cpp  window.hpp
src/app/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
src/common/: Brightness.hpp  Saturation.hpp  ToneMapping.hpp
src/cpu/: CPUBlurProcessor.cpp  CPUBlurProcessor.hpp  CPUBrightnessProcessor.cpp  CPUBrightnessProcessor.hpp  CPUSaturationProcessor.cpp  CPUSaturationProcessor.hpp  CPUToneMappingProcessor.cpp  CPUToneMappingProcessor.hpp
src/imageio/: CMakeLists.txt  ImageData.cpp  ImageData.hpp  MetaData.hpp
src/mtcpu/: MTCPUBlurProcessor.cpp  MTCPUBlurProcessor.hpp  MTCPUBrightnessProcessor.cpp  MTCPUBrightnessProcessor.hpp  MTCPUSaturationProcessor.cpp  MTCPUSaturationProcessor.hpp  MTCPUToneMappingProcessor.cpp  MTCPUToneMappingProcessor.hpp
src/proc/: CMakeLists.txt  IBrightnessProcessor.hpp  IImage.hpp  IProcessor.hpp  ISaturationProcessor.hpp  Pipeline.hpp
src/proc/common/: Brightness.hpp
src/proc/cpu/: CMakeLists.txt  CPUBrightnessProcessor.cpp  CPUBrightnessProcessor.hpp  CPUImage.hpp  CPUSaturationProcessor.cpp  CPUSaturationProcessor.hpp  CPUToneMappingProcessor.cpp  CPUToneMappingProcessor.hpp
src/proc/sycl/: CMakeLists.txt  SYCLBrightnessProcessor.cpp  SYCLBrightnessProcessor.hpp  SYCLImage.hpp  SYCLSaturationProcessor.cpp  SYCLSaturationProcessor.hpp  SYCLToneMappingProcessor.cpp
src/sycl/: SYCLBlurProcessor.cpp  SYCLBlurProcessor.hpp  SYCLBrightnessProcessor.cpp  SYCLBrightnessProcessor.hpp  SYCLSaturationKernel.hpp  SYCLSaturationProcessor.cpp  SYCLSaturationProcessor.hpp  SYCLToneMappingProcessor.cpp  SYCLToneMappingProcessor.hpp  SyclBlurProcessor.cpp  SyclBlurProcessor.hpp
tools/: format.sh
